--- a/.gitlab-ci-files/job-linux-desktop-debian10.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian10.yml
@@ -1,7 +1,20 @@
-#################################################
-# Makefile
-#################################################
 
+job-debian10-ninja-gcc:
+  tags: [ "docker-debian10" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
+  except:
+    variables:
+      - $NO_LINUX
+  variables:
+    CMAKE_GENERATOR: Ninja
+    CC: gcc
+    CXX: g++
+  extends: .job-linux-desktop
+
+
+#################################################
+#           Nightly
+#################################################
 
 job-debian10-makefile-gcc:
   tags: [ "docker-debian10" ]
@@ -14,36 +27,6 @@ job-debian10-makefile-gcc:
     CC: gcc
     CXX: g++
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
-  extends: .job-linux-desktop
-
-
-job-debian10-makefile-clang:
-  tags: [ "docker-debian10" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-      - $PACKAGE
-  variables:
-    CMAKE_GENERATOR: Unix Makefiles
-    CC: clang
-    CXX: clang++
-    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
-  extends: .job-linux-desktop
-
-
-#################################################
-# Ninja
-#################################################
-
-
-job-debian10-ninja-gcc:
-  tags: [ "docker-debian10" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
-  variables:
-    CMAKE_GENERATOR: Ninja
-    CC: gcc
-    CXX: g++
   extends: .job-linux-desktop
 
 
@@ -60,7 +43,6 @@ job-debian10-ninja-gcc-smallsdk:
   only:
     variables:
       - $NIGHTLY_MASTER
-
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO -DENABLE_ADVANCED_IM=NO -DENABLE_DB_STORAGE=NO
   extends: job-debian10-ninja-gcc
@@ -85,9 +67,25 @@ job-debian10-ninja-clang-novideo:
       - $NIGHTLY_MASTER
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-debian10-ninja-clang
-  
+  extends: job-debian10-ninja-clang  
 
+job-debian10-makefile-clang:
+  tags: [ "docker-debian10" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+      - $PACKAGE
+  except:
+    variables:
+      - $NO_LINUX
+  variables:
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+  extends: .job-linux-desktop
+  
 #################################################
 # Package - Nightly
 #################################################
