--- a/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
+++ b/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
@@ -1,6 +1,21 @@
+job-archlinux-latest-ninja-clang:
 
+  tags: [ "docker-archlinux-latest" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  except:
+    variables:
+      - $NO_LINUX
+  variables:
+    CMAKE_GENERATOR: Ninja
+    CC: clang
+    CXX: clang++
+  extends: .job-linux-desktop
+  
+#################################################
+#               Nightly
+################################################# 
+  
 job-archlinux-latest-makefile-gcc:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -14,7 +29,6 @@ job-archlinux-latest-makefile-gcc:
 
 
 job-archlinux-latest-makefile-clang:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -27,13 +41,7 @@ job-archlinux-latest-makefile-clang:
   extends: .job-linux-desktop
 
 
-#################################################
-# Ninja
-#################################################
-
-
 job-archlinux-latest-ninja-gcc:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -45,9 +53,7 @@ job-archlinux-latest-ninja-gcc:
     CXX: g++
   extends: .job-linux-desktop
 
-
 job-archlinux-latest-ninja-gcc-novideo:
-
   tags: [ "docker-archlinux-latest" ]
   only:
     variables:
@@ -56,20 +62,7 @@ job-archlinux-latest-ninja-gcc-novideo:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-archlinux-latest-ninja-gcc
 
-
-job-archlinux-latest-ninja-clang:
-
-  tags: [ "docker-archlinux-latest" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
-  variables:
-    CMAKE_GENERATOR: Ninja
-    CC: clang
-    CXX: clang++
-  extends: .job-linux-desktop
-
-
 job-archlinux-latest-ninja-clang-novideo:
-
   only:
     variables:
       - $NIGHTLY_MASTER
