--- a/.gitlab-ci-files/job-linux-desktop-debian8.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian8.yml
@@ -6,8 +6,8 @@ job-debian8-makefile-gcc:
   tags: [ "docker-debian8" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:8
   except:
-    variables:
-      - $NO_LINUX
+    refs:
+      - schedules
   variables:
     CMAKE_GENERATOR: Unix Makefiles
     CC: gcc
