--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -22,9 +22,6 @@
 .job-macosx-desktop:
   stage: build
   tags: [ "macosx" ]
-  except:
-    variables:
-      - $NO_MACOSX
   script:
     - *build_all_script
   artifacts:
@@ -38,8 +35,8 @@
 
 job-macosx-ninja:
   except:
-    variables:
-      - $NO_MACOSX
+    refs:
+      - schedules
   variables:
     CMAKE_GENERATOR: Ninja
   extends: .job-macosx-desktop
@@ -52,10 +49,7 @@ job-macosx-makefile:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $PACKAGE
-  except:
-    variables:
-      - $NO_MACOSX
+      - $DEPLOY_MACOSX
   variables:
     CMAKE_GENERATOR: Unix Makefiles
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
@@ -67,7 +61,8 @@ job-macosx-ninja-novideo:
       - $NIGHTLY_MASTER
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-macosx-ninja
+    CMAKE_GENERATOR: Ninja
+  extends: .job-macosx-desktop
 
 #job-macosx-xcode:
 #  extends: .job-macosx-desktop
@@ -93,7 +88,7 @@ job-macosx-makefile-package:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $PACKAGE
+       - $DEPLOY_MACOSX
   variables:
     CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   extends: job-macosx-makefile
@@ -117,6 +112,6 @@ job-macosx-makefile-deploy:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $DEPLOY
+       - $DEPLOY_MACOSX
   script:
     - scp build/OUTPUT/Packages/Linphone*.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/app/
