--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -47,9 +47,6 @@
   extends: .job-prepare
   stage: build
   tags: [ "windows" ]
-  except:
-    variables:
-      - $NO_WINDOWS
   variables:
     CMAKE_OPTIONS: -DENABLE_LIME_X3DH=NO -DENABLE_UNIT_TESTS=ON
 
@@ -79,10 +76,7 @@
     variables:
       - $NIGHTLY_MASTER
       - $NIGHTLY_RELEASE
-      - $PACKAGE
-  except:
-    variables:
-      - $NO_WINDOWS
+      - $DEPLOY_WINDOWS
   before_script: 
     #cache disabled on scheduled builds since we dot not need the fastest build
     - set "CLCACHE_DISABLE=1"
@@ -116,10 +110,7 @@ job-windows-vs2017-package:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $PACKAGE
-  except:
-    variables:
-      - $NOT_WINDOWS
+      - $DEPLOY_WINDOWS
   variables:
       CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   script:
@@ -158,10 +149,7 @@ job-windows-vs2017-win32-upload:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $DEPLOY
-  except:
-    variables:
-      - $NOT_WINDOWS
+      - $DEPLOY_WINDOWS
   dependencies:
     - job-windows-vs2017-package
   script:
