Fix debian10 (CI) [ci skip]

--- a/.gitlab-ci-files/job-linux-desktop-debian10.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian10.yml
@@ -31,21 +31,31 @@ job-debian10-makefile-gcc:
 
 
 job-debian10-ninja-gcc-novideo:
+  tags: [ "docker-debian10" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
   only:
     variables:
       - $NIGHTLY_MASTER
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-debian10-ninja-gcc
+    CMAKE_GENERATOR: Ninja
+    CC: gcc
+    CXX: g++
+  extends: .job-linux-desktop
 
 
 job-debian10-ninja-gcc-smallsdk:
+  tags: [ "docker-debian10" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
   only:
     variables:
       - $NIGHTLY_MASTER
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO -DENABLE_ADVANCED_IM=NO -DENABLE_DB_STORAGE=NO
-  extends: job-debian10-ninja-gcc
+    CMAKE_GENERATOR: Ninja
+    CC: gcc
+    CXX: g++
+  extends: .job-linux-desktop
 
 
 job-debian10-ninja-clang:
