--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -39,20 +39,6 @@ job-debian9-makefile-gcc:
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
   extends: .job-linux-desktop
 
-
-job-debian9-makefile-clang:
-  tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_GENERATOR: Unix Makefiles
-    CC: clang
-    CXX: clang++
-    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
-  extends: .job-linux-desktop
-
 job-debian9-ninja-gcc-novideo:
   only:
     variables:
@@ -60,7 +46,6 @@ job-debian9-ninja-gcc-novideo:
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-debian9-ninja-gcc
-
 
 
 job-debian9-ninja-clang:
@@ -76,7 +61,6 @@ job-debian9-ninja-clang:
     CXX: clang++
   extends: .job-linux-desktop
 
-
 job-debian9-ninja-clang-novideo:
   only:
     variables:
@@ -84,4 +68,54 @@ job-debian9-ninja-clang-novideo:
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-debian9-ninja-clang
+  
+job-debian9-makefile-clang:
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+      - $DEPLOY_LINUX
+  variables:
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+  extends: .job-linux-desktop
 
+#################################################
+# Package - Nightly
+#################################################
+
+job-debian9-makefile-clang-package:
+  stage: package
+  tags: [ "docker-debian9" ]
+  dependencies:
+    - job-debian9-makefile-clang
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+  extends: job-debian9-makefile-clang
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/Linphone*.AppImage
+    expire_in: 1 week
+
+#################################################
+# Deploy - Nightly
+#################################################
+
+job-debian9-makefile-clang-deploy:
+  stage: deploy
+  tags: [ "docker-debian9" ]
+  dependencies:
+    - job-debian9-makefile-clang-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  script:
+    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
