--- a/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
+++ b/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
@@ -59,9 +59,9 @@ if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
     endif()
   endif()
   if(DO_APPIMAGE)
-    execute_process( COMMAND "@CMAKE_BINARY_DIR@/../create_appimage.sh" RESULT_VARIABLE CPACK_COMMAND_RESULT)
+    execute_process( COMMAND "@CMAKE_SOURCE_DIR@/../create_appimage.sh" RESULT_VARIABLE CPACK_COMMAND_RESULT WORKING_DIRECTORY "@CMAKE_INSTALL_PREFIX@/.." )
     if(CPACK_COMMAND_RESULT)
-      message(FATAL_ERROR "Failed to create AppImage package with this command : @CMAKE_BINARY_DIR@/../create_appimage.sh\nMaybe the .appimage already exists and is running. Please remove the file before packaging if it is the case.")
+      message(FATAL_ERROR "Failed to create AppImage package with this command : @CMAKE_SOURCE_DIR@/../create_appimage.sh at @CMAKE_INSTALL_PREFIX@/..\nMaybe the .appimage already exists and is running. Please remove the file before packaging if it is the case.")
     endif()
   endif()
   if (@PERFORM_SIGNING@)
