--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -42,7 +42,40 @@ job-centos7-ninja-gcc:
     CC: gcc
     CXX: g++
   extends: .job-linux-desktop
+#################################################
+# Package - Nightly
+#################################################
 
+job-centos7-ninja-gcc-package:
+  stage: package
+  tags: [ "docker" ]
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+  extends: job-centos7-ninja-gcc
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/Linphone*.AppImage
+    expire_in: 1 week
+
+#################################################
+# Deploy - Nightly
+#################################################
+
+job-centos7-ninja-gcc-deploy:
+  stage: deploy
+  tags: [ "docker" ]
+  dependencies:
+    - job-centos7-ninja-gcc-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  script:
+    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
 
 #job-centos7-ninja-clang:
 
