--- a/.gitlab-ci-files/job-linux-desktop-debian8.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian8.yml
@@ -32,26 +32,36 @@ job-debian8-makefile-clang:
   extends: .job-linux-desktop
 
 #################################################
-# Ninja
+# Package - Nightly
 #################################################
 
-#job-debian8-ninja-gcc:
-#
-#  tags: [ "docker-debian8" ]
-#  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:8
-#  variables:
-#    CMAKE_GENERATOR: Ninja
-#    CC: gcc
-#    CXX: g++
-#  extends: .job-linux-desktop
+job-debian8-makefile-clang-package:
+  stage: package
+  tags: [ "docker-debian8" ]
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+  extends: job-debian8-makefile-clang
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/Linphone*.AppImage
+    expire_in: 1 week
 
+#################################################
+# Deploy - Nightly
+#################################################
 
-#job-debian8-ninja-clang:
-#
-#  tags: [ "docker-debian8" ]
-#  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:8
-#  variables:
-#    CMAKE_GENERATOR: Ninja
-#    CC: clang
-#    CXX: clang++
-#  extends: .job-linux-desktop
+job-debian8-makefile-clang-deploy:
+  stage: deploy
+  tags: [ "docker-debian8" ]
+  dependencies:
+    - job-debian8-makefile-clang-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_LINUX
+  script:
+    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
