--- a/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
+++ b/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
@@ -78,34 +78,34 @@ job-archlinux-latest-ninja-clang-novideo:
 # Package - Nightly
 #################################################
 
-job-archlinux-latest-makefile-clang-package:
-  stage: package
-  tags: [ "docker-archlinux-latest" ]
-  only:
-     variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
-  variables:
-    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
-  extends: job-archlinux-latest-makefile-clang
-  artifacts:
-    paths:
-      - build/OUTPUT/Packages/Linphone*.AppImage
-    expire_in: 1 week
-
+#job-archlinux-latest-makefile-clang-package:
+#  stage: package
+#  tags: [ "docker-archlinux-latest" ]
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  variables:
+#    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+#  extends: job-archlinux-latest-makefile-clang
+#  artifacts:
+#    paths:
+#      - build/OUTPUT/Packages/Linphone*.AppImage
+#    expire_in: 1 week
+#
 #################################################
 # Deploy - Nightly
 #################################################
 
-job-archlinux-latest-makefile-clang-deploy:
-  stage: deploy
-  tags: [ "docker-archlinux-latest" ]
-  dependencies:
-    - job-archlinux-latest-makefile-clang-package
-  only:
-     variables:
-       - $NIGHTLY_MASTER
-       - $DEPLOY_LINUX
-  script:
-    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
+#job-archlinux-latest-makefile-clang-deploy:
+#  stage: deploy
+#  tags: [ "docker-archlinux-latest" ]
+#  dependencies:
+#    - job-archlinux-latest-makefile-clang-package
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  script:
+#    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
 
