Reactivate wget for linuxdeploy retrieving, fix macos docker, fix typo on status message for CPack

--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -21,7 +21,7 @@
 
 .job-macosx-desktop:
   stage: build
-  tags: [ "macosx" ]
+  tags: [ "macosx-xcode11" ]
   script:
     - *build_all_script
   artifacts:
