--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -63,7 +63,8 @@ job-centos7-ninja-gcc:
 job-centos7-ninja-gcc-package:
   stage: package
   tags: [ "docker" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+  #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7-fuse-wget
   only:
      variables:
        - $NIGHTLY_MASTER
