--- a/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
+++ b/linphone-app/cmake_builder/linphone_package/CMakeLists.txt
@@ -142,14 +142,6 @@ elseif (APPLE)
   foreach (LIBRARY ${SHARED_LIBRARIES})
     install(FILES "${LIBRARY}" DESTINATION "${APPLICATION_NAME}.app/Contents/Frameworks")
   endforeach ()
-set(DEPLOYQT_PROGRAM NO)
-# Uncomment to reactivate macdeployqt
-#  find_program(DEPLOYQT_PROGRAM macdeployqt)
-#  if (NOT DEPLOYQT_PROGRAM)
-#    message(FATAL_ERROR "Could not find the macdeployqt program. Make sure it is in the PATH.")
-#  endif ()
-
-
   if (EXISTS "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/mediastreamer")
     file(COPY "${LINPHONE_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/mediastreamer" DESTINATION "${APPLICATION_NAME}.app/Contents/Resources/${CMAKE_INSTALL_LIBDIR}" USE_SOURCE_PERMISSIONS)
   endif ()
@@ -180,7 +172,11 @@ set(DEPLOYQT_PROGRAM NO)
   install( CODE "execute_process(COMMAND install_name_tool -change libminizip.dylib \"@executable_path/../Frameworks/libminizip.dylib\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/MacOS/${EXECUTABLE_NAME}\")")
   install( CODE "execute_process(COMMAND install_name_tool -add_rpath \"@executable_path/../Frameworks/\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/MacOS/${EXECUTABLE_NAME}\")")
   install( CODE "execute_process(COMMAND install_name_tool -add_rpath \"@executable_path/../lib/\" \"\${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app/Contents/MacOS/${EXECUTABLE_NAME}\")")
-  if(ENABLE_APP_PACKAGING AND DEPLOYQT_PROGRAM)
+  if(ENABLE_APP_PACKAGING)
+    find_program(DEPLOYQT_PROGRAM macdeployqt)
+    if (NOT DEPLOYQT_PROGRAM)
+        message(FATAL_ERROR "Could not find the macdeployqt program. Make sure it is in the PATH.")
+    endif()
     install( CODE "execute_process(COMMAND ${DEPLOYQT_PROGRAM} \${CMAKE_INSTALL_PREFIX}/${APPLICATION_NAME}.app -qmldir=${LINPHONE_QML_DIR})")
   endif()
   if (LINPHONE_BUILDER_SIGNING_IDENTITY)
