Test with Centos7 and Qt image

--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -62,10 +62,8 @@ job-centos7-ninja-gcc:
 
 job-centos7-ninja-gcc-package:
   stage: package
-  tags: [ "linux-nuc" ]
-  #tags: [ "docker" ]
-  #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
-  #image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7-fuse-wget
+  tags: [ "docker" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7  
   only:
      variables:
        - $NIGHTLY_MASTER
@@ -87,8 +85,7 @@ job-centos7-ninja-gcc-package:
 
 job-centos7-ninja-gcc-deploy:
   stage: deploy
-  tags: [ "linux-nuc" ]
-  #tags: [ "docker" ]
+  tags: [ "docker" ]
   dependencies:
     - job-centos7-ninja-gcc-package
   only:
