Add Win32 support by user settings or by projects, rewrote more generic Runtime output for Windows, add status message for CPack generator

--- a/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
+++ b/.gitlab-ci-files/job-linux-desktop-archlinux-latest.yml
@@ -1,6 +1,20 @@
-
+job-archlinux-latest-ninja-clang:
+  tags: [ "docker-archlinux-latest" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
+  except:
+    refs:
+      - schedules
+  variables:
+    CMAKE_GENERATOR: Ninja
+    CC: clang
+    CXX: clang++
+  extends: .job-linux-desktop
+  
+#################################################
+#               Nightly
+################################################# 
+  
 job-archlinux-latest-makefile-gcc:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -14,7 +28,6 @@ job-archlinux-latest-makefile-gcc:
 
 
 job-archlinux-latest-makefile-clang:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -27,13 +40,7 @@ job-archlinux-latest-makefile-clang:
   extends: .job-linux-desktop
 
 
-#################################################
-# Ninja
-#################################################
-
-
 job-archlinux-latest-ninja-gcc:
-
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
   only:
@@ -45,9 +52,7 @@ job-archlinux-latest-ninja-gcc:
     CXX: g++
   extends: .job-linux-desktop
 
-
 job-archlinux-latest-ninja-gcc-novideo:
-
   tags: [ "docker-archlinux-latest" ]
   only:
     variables:
@@ -56,25 +61,51 @@ job-archlinux-latest-ninja-gcc-novideo:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-archlinux-latest-ninja-gcc
 
-
-job-archlinux-latest-ninja-clang:
-
+job-archlinux-latest-ninja-clang-novideo:
   tags: [ "docker-archlinux-latest" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-archlinux:latest
-  variables:
-    CMAKE_GENERATOR: Ninja
-    CC: clang
-    CXX: clang++
-  extends: .job-linux-desktop
-
-
-job-archlinux-latest-ninja-clang-novideo:
-
   only:
     variables:
       - $NIGHTLY_MASTER
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
-  extends: job-archlinux-latest-ninja-clang
+    CMAKE_GENERATOR: Ninja
+    CC: clang
+    CXX: clang++
+  extends: .job-linux-desktop
   
+#################################################
+# Package - Nightly
+#################################################
+
+#job-archlinux-latest-makefile-clang-package:
+#  stage: package
+#  tags: [ "docker-archlinux-latest" ]
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  variables:
+#    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+#  extends: job-archlinux-latest-makefile-clang
+#  artifacts:
+#    paths:
+#      - build/OUTPUT/Packages/Linphone*.AppImage
+#    expire_in: 1 week
+#
+#################################################
+# Deploy - Nightly
+#################################################
+
+#job-archlinux-latest-makefile-clang-deploy:
+#  stage: deploy
+#  tags: [ "docker-archlinux-latest" ]
+#  dependencies:
+#    - job-archlinux-latest-makefile-clang-package
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  script:
+#    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
 
