--- a/.gitlab-ci-files/job-linux-desktop-debian9.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian9.yml
@@ -1,52 +1,45 @@
 
-job-debian9-makefile-gcc:
-
-  tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_GENERATOR: Unix Makefiles
-    CC: gcc
-    CXX: g++
-    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
-  extends: .job-linux-desktop
-
-
-job-debian9-makefile-clang:
-
-  tags: [ "docker-debian9" ]
-  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
-  only:
-    variables:
-      - $NIGHTLY_MASTER
-  variables:
-    CMAKE_GENERATOR: Unix Makefiles
-    CC: clang
-    CXX: clang++
-    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
-  extends: .job-linux-desktop
-
-
-#################################################
-# Ninja
-#################################################
-
 
 job-debian9-ninja-gcc:
-
   tags: [ "docker-debian9" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  except:
+    refs:
+      - schedules
   variables:
     CMAKE_GENERATOR: Ninja
     CC: gcc
     CXX: g++
   extends: .job-linux-desktop
 
+  
+job-debian9-ninja-gcc-smallsdk:
+  except:
+    refs:
+      - schedules
+  variables:
+    CMAKE_OPTIONS: -DENABLE_VIDEO=NO -DENABLE_ADVANCED_IM=NO -DENABLE_DB_STORAGE=NO
+  extends: job-debian9-ninja-gcc
+
+
+#################################################
+#               Nightly
+#################################################
+
+job-debian9-makefile-gcc:
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: gcc
+    CXX: g++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+  extends: .job-linux-desktop
 
 job-debian9-ninja-gcc-novideo:
-
   only:
     variables:
       - $NIGHTLY_MASTER
@@ -55,15 +48,7 @@ job-debian9-ninja-gcc-novideo:
   extends: job-debian9-ninja-gcc
 
 
-job-debian9-ninja-gcc-smallsdk:
-
-  variables:
-    CMAKE_OPTIONS: -DENABLE_VIDEO=NO -DENABLE_ADVANCED_IM=NO -DENABLE_DB_STORAGE=NO
-  extends: job-debian9-ninja-gcc
-
-
 job-debian9-ninja-clang:
-
   tags: [ "docker-debian9" ]
   only:
     variables:
@@ -76,7 +61,6 @@ job-debian9-ninja-clang:
     CXX: clang++
   extends: .job-linux-desktop
 
-
 job-debian9-ninja-clang-novideo:
   only:
     variables:
@@ -84,4 +68,51 @@ job-debian9-ninja-clang-novideo:
   variables:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-debian9-ninja-clang
+  
+job-debian9-makefile-clang:
+  tags: [ "docker-debian9" ]
+  image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:9
+  only:
+    variables:
+      - $NIGHTLY_MASTER
+  variables:
+    CMAKE_GENERATOR: Unix Makefiles
+    CC: clang
+    CXX: clang++
+    ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
+  extends: .job-linux-desktop
 
+#################################################
+# Package - Nightly
+#################################################
+
+#job-debian9-makefile-clang-package:
+#  stage: package
+#  tags: [ "docker-debian9" ]
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  variables:
+#    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+#  extends: job-debian9-makefile-clang
+#  artifacts:
+#    paths:
+#      - build/OUTPUT/Packages/Linphone*.AppImage
+#    expire_in: 1 week
+#
+#################################################
+# Deploy - Nightly
+#################################################
+
+#job-debian9-makefile-clang-deploy:
+#  stage: deploy
+#  tags: [ "docker-debian9" ]
+#  dependencies:
+#    - job-debian9-makefile-clang-package
+#  only:
+#     variables:
+#       - $NIGHTLY_MASTER
+#       - $DEPLOY_LINUX
+#  script:
+#    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
