--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -47,10 +47,8 @@
   extends: .job-prepare
   stage: build
   tags: [ "windows" ]
-  
   variables:
     CMAKE_OPTIONS: -DENABLE_LIME_X3DH=NO -DENABLE_UNIT_TESTS=ON
-
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
@@ -66,30 +64,31 @@
     - cmake .. -G "Visual Studio 15 2017" -DLINPHONESDK_PLATFORM=Desktop -DENABLE_CSHARP_WRAPPER=YES -DCMAKE_BUILD_TYPE=Release %DEFAULT_WINDOWS_CMAKE_OPTIONS% %CMAKE_OPTIONS%
     - cmake --build . --target ALL_BUILD --config Release %LBC_NODEBUG_OPTIONS% -- /maxcpucount /nodeReuse:true /p:TrackFileAccess=false
     - C:\PROGRA~1\Python37\Scripts\cl -s
-
   artifacts:
     paths:
       - build\OUTPUT
     expire_in: 2 days
-            
-.job-windows-vs2017-scheduled:
+    
+job-windows-vs2017:
+  except:
+    refs:
+      - schedules
   extends: .job-windows-vs2017
-
+  
+  
+#################################################
+#               NIGHTLY
+################################################# 
+  
+.job-windows-vs2017-scheduled:
   only:
     variables:
       - $NIGHTLY_MASTER
       - $NIGHTLY_RELEASE
-      - $PACKAGE_RUN_WINDOWS
   before_script: 
     #cache disabled on scheduled builds since we dot not need the fastest build
     - set "CLCACHE_DISABLE=1"
-    
-    
-job-windows-vs2017:
   extends: .job-windows-vs2017
-  except:
-    refs:
-      - schedules
       
 job-windows-vs2017-scheduled:
   extends: .job-windows-vs2017-scheduled
@@ -100,19 +99,19 @@ job-windows-vs2017-novideo:
     CMAKE_OPTIONS: -DENABLE_LIME_X3DH=NO -DENABLE_VIDEO=NO
 
 #################################################
-# PACKAGE
+#               PACKAGE
 #################################################
 
 #Remove . when packaging process is ready to use
 job-windows-vs2017-package:
   stage: package
   tags: [ "windows" ]
-  dependencies:
-    - job-windows-vs2017-scheduled
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $PACKAGE_RUN_WINDOWS
+      - $DEPLOY_WINDOWS
+  variables:
+      CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
@@ -138,14 +137,18 @@ job-windows-vs2017-package:
       - results\*
     expire_in: 1 weeks
  
+ 
+#################################################
+#               DEPLOY
+#################################################
 
 job-windows-vs2017-win32-upload:
   stage: deploy
   tags: [ "windows"]
   only:
     variables:
-      - $DEPLOY_RUN_WINDOWS
       - $NIGHTLY_MASTER
+      - $DEPLOY_WINDOWS
   dependencies:
     - job-windows-vs2017-package
   script:
