--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,10 @@ variables:
   MAKEFILE_JOBS: 5
   CCACHE_SIZE: 2G
 #this option is used to speedup submodule building times, when we don't need to trace debug (like SDK where it is already tested in its project)
-  LBC_NODEBUG_OPTIONS : --parallel $MAKEFILE_JOBS  
+  LBC_NODEBUG_OPTIONS : --parallel $MAKEFILE_JOBS 
+  DEFAULT_LINUX_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
+  DEFAULT_MACOS_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
+  DEFAULT_WINDOWS_CMAKE_OPTIONS: -DCMAKE_BUILD_PARALLEL_LEVEL=$MAKEFILE_JOBS
   
 #  DEFAULT_LINUX_CMAKE_OPTIONS: -DENABLE_NON_FREE_CODECS=YES -DENABLE_OPENH264=YES
 #  DEFAULT_MACOS_CMAKE_OPTIONS: -DCMAKE_OSX_DEPLOYMENT_TARGET=10.11 -DENABLE_UPDATE_CHECK=YES
