--- a/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
+++ b/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
@@ -22,8 +22,9 @@
 set(DO_TGZ @CPACK_BINARY_TGZ@)
 set(DO_TZ @CPACK_BINARY_TZ@)
 set(DO_STGZ @CPACK_BINARY_STGZ@)
-set(DO_DRAGANDDROP @CPACK_BINARY_DRAGNDROP@)
+set(DO_DRAGNDROP @CPACK_BINARY_DRAGNDROP@)
 set(DO_GENERATOR @DO_GENERATOR@)
+set(DO_APPIMAGE @DO_APPIMAGE@)
 
 
 if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
@@ -45,8 +46,8 @@ if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
       message(FATAL_ERROR "Failed to create STGZ package!")
     endif()
   endif()
-  if(DO_DRAGANDDROP)
-    execute_process( COMMAND ${CMAKE_CPACK_COMMAND} -G DragAndDrop RESULT_VARIABLE CPACK_COMMAND_RESULT)
+  if(DO_DRAGNDROP)
+    execute_process( COMMAND ${CMAKE_CPACK_COMMAND} -G DragNDrop RESULT_VARIABLE CPACK_COMMAND_RESULT)
     if(CPACK_COMMAND_RESULT)
       message(FATAL_ERROR "Failed to create DragAndDrop package!")
     endif()
@@ -55,6 +56,14 @@ if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
     execute_process( COMMAND ${CMAKE_CPACK_COMMAND} -G @CPACK_GENERATOR@ RESULT_VARIABLE CPACK_COMMAND_RESULT)
     if(CPACK_COMMAND_RESULT)
       message(FATAL_ERROR "Failed to create @CPACK_GENERATOR@ package!")
+    endif()
+  endif()
+  if(DO_APPIMAGE)
+#    execute_process( COMMAND cp -rfv "@CMAKE_SOURCE_DIR@/../tools/linuxdeploy-x86_64.AppImage" "@CMAKE_INSTALL_PREFIX@/..")
+#    execute_process( COMMAND chmod +x "@CMAKE_INSTALL_PREFIX@/../linuxdeploy-x86_64.AppImage")
+    execute_process( COMMAND "@CMAKE_SOURCE_DIR@/../tools/create_appimage.sh" RESULT_VARIABLE CPACK_COMMAND_RESULT WORKING_DIRECTORY "@CMAKE_INSTALL_PREFIX@/.." )
+    if(CPACK_COMMAND_RESULT)
+      message(FATAL_ERROR "Failed to create AppImage package with this command : @CMAKE_SOURCE_DIR@/../tools/create_appimage.sh at @CMAKE_INSTALL_PREFIX@/..\nMaybe the .appimage already exists and is running. Please remove the file before packaging if it is the case.")
     endif()
   endif()
   if (@PERFORM_SIGNING@)
