--- a/.gitlab-ci-files/job-linux-desktop-centos7.yml
+++ b/.gitlab-ci-files/job-linux-desktop-centos7.yml
@@ -100,6 +100,7 @@ job-centos7-ninja-gcc-deploy:
 #################################################
 
 job-centos7-debug:
+  stage: deploy
   tags: [ "docker" ]
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-centos:7
   only:
